# rust_toy_agent

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  SECURITY.md  SUPPORT.md  clippy.toml  quicksort  quicksort.cpp  quicksort_demo.cpp  quicksort_random  quicksort_random.cpp  random_sort  random_sort.cpp  rustfmt.toml  s01_agent_loop.py  simple_random_sort.cpp  todo.txt
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml  security.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  architecture.md  configuration.md  security-model.md  testing.md
learning/: 01_getting_started.md  02_structs_and_ownership.md  03_references_and_lifetimes.md  04_modules_and_visibility.md  05_result_and_option.md  06_json_and_serde.md  07_traits_and_generics.md  08_async_await.md  09_concurrency.md  10_observability_and_shipping.md  README.md  TABLE_OF_CONTENTS.md
proptest-regressions/: agent_loop.txt
scripts/: fetch_swe_bench_data.sh  install-hooks.sh
scripts/e2e/: run_all.sh
scripts/git-hooks/: pre-commit
scripts/swe_bench/: run_single_swe.sh
scripts/swe_bench_results/: marshmallow-code__marshmallow-1359.jsonl
src/: agent_loop.rs  agent_teams.rs  autonomous_agents.rs  background_tasks.rs  client.rs  config.rs  context_compact.rs  e2e_test.rs  help_utils.rs  lib.rs  llm_client.rs  logger.rs  main.rs  metrics.rs  s01_agent_loop.rs  s02_agent_loop.rs  s03_todo_write.rs  skill_loading.rs  subagent.rs  task_system.rs  team_protocols.rs  text_util.rs  todo_manager.rs  tool_runners.rs  tools.rs  worktree.rs
src/bin_core/: agent_loop.rs  constants.rs  dispatch.rs  mod.rs  repl.rs  state.rs  teammate.rs  test_mode.rs
src/worktree/: binding.rs  events.rs  git.rs  index.rs  manager.rs  manager_tests.rs  mod.rs
task_tests/: README.md
task_tests/api_mock/: data.json  data2.json  filter_scores.py  test.json
task_tests/bug_fix/: buggy_sort.py  test.json
task_tests/chinese_literary_style/: test.json
task_tests/chinese_literary_style_5/: test.json
task_tests/csv_transform/: compute_revenue.py  sales_data.csv  test.json
task_tests/dependency_resolve/: test.json  topological_sort.py
task_tests/fibonacci_sum/: fibonacci_sum  test.json  (+3 more)
tests/: TEST_RESULTS.md  cli_integration.rs  mock_llm_integration.rs
(+41 files in other folders)
