[package]
name = "rust_toy_agent"
version = "0.1.0"
edition = "2021"
description = "An async Rust agent with tool-use capabilities for coding tasks"
license = "MIT"
repository = "https://github.com/yugary/rust_toy_agent"
readme = "README.md"
rust-version = "1.75"

[lib]
name = "rust_toy_agent"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
crossbeam-channel = "0.5"
dashmap = "6"
notify = "6"
git2 = "0.19"

[dev-dependencies]
tempfile = "3"

[aliases]
e2e-sum = "run -- --test sum_1_to_n"
e2e-fib = "run -- --test fibonacci_sum"
e2e-prime = "run -- --test prime_sum"
