[package]
name = "rust_toy_agent"
version = "0.1.0"
edition = "2021"
description = "An async Rust agent with tool-use capabilities for coding tasks"
license = "MIT"
repository = "https://github.com/yugary/rust_toy_agent"
readme = "README.md"
rust-version = "1.75"

[lib]
name = "rust_toy_agent"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dashmap = "6"
notify = "6"
wait-timeout = "0.2"
git2 = "0.19"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
proptest = "1"
